// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExportButton render with props 1`] = `
<div>
  <a
    class="button export-csv"
    data-ouia-component-id="OUIA-Generated-Button-secondary-2"
    data-ouia-component-type="PF6/Button"
    data-ouia-safe="true"
    href="url"
    title="title info"
  >
    <span
      class="pf-v6-c-button__text"
    >
      info
    </span>
  </a>
</div>
`;

exports[`ExportButton render without props 1`] = `
<div>
  <a
    class="button export-csv"
    data-ouia-component-id="OUIA-Generated-Button-secondary-1"
    data-ouia-component-type="PF6/Button"
    data-ouia-safe="true"
    href="/?format=csv"
    title="Export to CSV"
  >
    <span
      class="pf-v6-c-button__text"
    >
      Export
    </span>
  </a>
</div>
`;
